syntax = "proto3";

package com.qsystem.exceljava;

option java_package = "com.qsystem.exceljava.grpc";
option java_outer_classname = "ExcelServiceProto";
option java_multiple_files = true;

// Excel生成服务
service ExcelGeneratorService {
    // 将JSON数据转换为Excel文件
    rpc GenerateExcel(ExcelGenerationRequest) returns (ExcelGenerationResponse);
}

// Excel生成请求
message ExcelGenerationRequest {
    // JSON内容（字符串格式）
    string json_content = 1;
    
    // 策略名称
    string strategy_name = 2;
}

// Excel生成响应
message ExcelGenerationResponse {
    // 生成是否成功
    bool success = 1;
    
    // 生成的Excel文件在服务器上的完整路径
    string excel_file_path = 2;
    
    // 错误信息（如果失败）
    string error_message = 3;
    
    // 文件大小（字节）
    int64 file_size = 4;
    
    // 生成时间戳
    int64 generation_timestamp = 5;
}